welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: overloaded method value max with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int, Int, Int)
  if (Math.max(a,b,c)==c){return true}
           ^