welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
  if (bOk==false){if (a<=b && b<=c){return true};return false}
  if (Math.max(a,b,c)==c){return true}
  return false}